# rlbot-rocketsim

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
examples/: rlbot_to_rocketsim.rs  rocketsim_to_rlbot.rs
src/: body.rs  common.rs  from_rlbot.rs  lib.rs  match_context.rs  to_rlbot.rs
tests/: match_context.rs  round_trip.rs  soccar_enrichment.rs  soccar_sequences.rs
